--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid black;
 }
+
 .accordion-container .heading{
     width: 60%;
 }
@@ -26,18 +28,25 @@
     font-size: 30px;
     font-weight: 700;
     padding: 20px;
+    cursor: pointer;
 }
+
 .first-cont p{
     margin: 20px;
+    color: blue;
 }
 
 .hide img{
     display: none;
-    opacity: 0;
-    transition: opacity 1s ease-out;
+    transition:  1s ease-out;
+}
+
+.accordion-container:hover .first-cont p{
+    color: black;
 }
 
 .first-cont:hover  .hide img{
     display: block;
-    opacity: 1;
 }
+
+
