--- a/style.css
+++ b/style.css
@@ -29,8 +29,6 @@
 }
 
 
-
-
 .first-cont{
     width: 60%;
     border-top: 2px solid rgb(112, 111, 111);
@@ -51,11 +49,15 @@
     align-items: center;
     justify-content: space-between;
 }
+/* icons */
 
 .fa-solid{
-    color: blue;
     display: none;
     transition: .8s ease-in-out;
+}
+
+#x{
+    display: none;
 }
 
 .hide img{
@@ -63,12 +65,13 @@
     transition:  1s ease-out;
 }
 
+/* hovers */
 .accordion-container:hover .first-cont p{
     color: black;
 }
 .accordion-container:hover .fa-solid{
-    color: black;
     display: block;
+    transition: ease .8s;
 }
 
 
@@ -76,8 +79,24 @@
     display: block;
 }
 
-.first-cont:hover .hide img{
+.trig:checked ~ .fa-plus{
+    display: none;
+}
+
+.trig:checked ~ .fa-x{
+    display: inline-block;
+}
+
+/* .first-cont:hover .hide img{
     display: block;
+} */
+
+.first-cont:hover #x{
+    display: block;
+}
+
+.first-cont:hover .fa-solid{
+    display: none;
 }
 
 .trig{
@@ -87,3 +106,5 @@
     display: none;
     
 }
+
+
